<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseEmpresa">

    <Button
        android:id="@+id/button5"
        android:layout_width="81dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/patrah"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/adelante" />

    <TextView

        android:id="@+id/textView"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/uneteEmp"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:fontFamily="cursive" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_toStartOf="@+id/editText8"
        android:layout_toLeftOf="@+id/editText8"
        android:ems="10"
        android:hint="@string/empresanombre"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="324dp"
        android:layout_height="208dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        app:srcCompat="@drawable/foodzapplogoemp" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="169dp"
        android:ems="10"
        android:hint="+1"
        android:inputType="phone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="44dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_toStartOf="@+id/editText10"
        android:layout_toLeftOf="@+id/editText10"
        app:srcCompat="@drawable/banderadominicana" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="266dp"
        android:layout_height="82dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="Breve descripcion de la empresa"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-53dp"
        android:ems="10"
        android:hint="                   RNC"
        android:inputType="number" />

</RelativeLayout>